--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,15 +17,15 @@ RUN ctest --output-on_failure
 FROM ubuntu:jammy as deploy
 
 # TODO(!): Copy server output binary to "."
-# COPY --from=builder /usr/src/project/build/bin/example_server .
+COPY --from=builder /usr/src/project/build/bin/server .
 
 # TODO(!): Expose some port(s)
-# EXPOSE 80
+EXPOSE 8080
 
 # Use ENTRYPOINT to specify the binary name
 # TODO(!): Update with real server name
-# ENTRYPOINT ["./example_server"]
+ENTRYPOINT ["./server"]
 
 # Use CMD to specify arguments to ENTRYPOINT
 # TODO(!): Update with real server args
-# CMD [""]
+CMD ["8080"]
