Refactor of server_main.cc
Change-Id: I7200c1843781218e39742c4a0178d8cc816020fc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,12 +34,14 @@ message(STATUS "Boost version: ${Boost_VERSION}")
 
 include_directories(include)
 
-# TODO(!): Update name and srcs
-# add_library(server_lib src/server.cc)
+# Add session and server libraries
+add_library(session_lib src/session.cc)
+add_library(server_lib src/server.cc)
+target_link_libraries(server_lib session_lib)
 
-# TODO(!): Update executable name, srcs, and deps
+# add server executable
 add_executable(server src/server_main.cc)
-target_link_libraries(server Boost::system)
+target_link_libraries(server session_lib server_lib Boost::system)
 
 # TODO(!): Update test executable name, srcs, and deps
 # add_executable(example_lib_test tests/example_lib_test.cc)
