--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,19 +37,20 @@ include_directories(include)
 # Add session and server libraries
 add_library(session_lib src/session.cc)
 add_library(server_lib src/server.cc)
+add_library(config_parser_lib src/config_parser.cc)
 target_link_libraries(server_lib session_lib)
 
 # add server executable
 add_executable(server src/server_main.cc)
 target_link_libraries(server session_lib server_lib Boost::system)
 
-# TODO(!): Update test executable name, srcs, and deps
-# add_executable(example_lib_test tests/example_lib_test.cc)
-# target_link_libraries(example_lib_test example_lib gtest_main)
+# Update test executable name, srcs, and deps
+add_executable(config_parser_test tests/config_parser_test.cc)
+target_link_libraries(config_parser_test config_parser_lib gtest_main)
 
-# TODO(!): Update with test binary
-# gtest_discover_tests(example_lib_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+# Update with test binary
+gtest_discover_tests(config_parser_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
-# TODO(!): Update with target/test targets
-# include(cmake/CodeCoverageReportConfig.cmake)
-# generate_coverage_report(TARGETS example_server example_lib TESTS example_lib_test)
+# Update with target/test targets
+include(cmake/CodeCoverageReportConfig.cmake)
+generate_coverage_report(TARGETS config_parser_lib TESTS config_parser_test)
