Refactor of echo server behavior
Request_handler.cc represents a more testable form of the http req/response handling

Test cases created for request handler and reache 100% code coverage

Original echo server refactor needed to move more includes into .cc's

Change-Id: I9d2da16041b4b8c9a5c8e7dbbf4a4de2b29c23ac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,20 +37,21 @@ include_directories(include)
 # Add session and server libraries
 add_library(session_lib src/session.cc)
 add_library(server_lib src/server.cc)
+add_library(handler_lib src/request_handler.cc)
 add_library(config_parser_lib src/config_parser.cc)
-target_link_libraries(server_lib session_lib)
+target_link_libraries(server_lib session_lib handler_lib)
 
 # add server executable
 add_executable(server src/server_main.cc)
 target_link_libraries(server session_lib server_lib Boost::system)
 
 # Update test executable name, srcs, and deps
-add_executable(all_test tests/config_parser_test.cc tests/session_test.cc)
-target_link_libraries(all_test config_parser_lib session_lib gtest_main)
+add_executable(all_test tests/config_parser_test.cc tests/request_handler_test.cc)
+target_link_libraries(all_test config_parser_lib handler_lib gtest_main)
 
 # Update with test binary
-gtest_discover_tests(all_test config_parser_test session_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+gtest_discover_tests(all_test config_parser_test request_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
 # Update with target/test targets
 include(cmake/CodeCoverageReportConfig.cmake)
-generate_coverage_report(TARGETS config_parser_lib TESTS config_parser_test)
+generate_coverage_report(TARGETS handler_lib config_parser_lib TESTS all_test)
