Added configuration file setup to Docker files
Docker file now updated to match how server takes in port via configuration file
(Added extra gcovr in base image)

Fixed config parser bug with nested braces

Change-Id: I363f5d4cb52fb3aab0c1d6570dec0d3d22dd0965

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,10 +16,9 @@ RUN ctest --output-on_failure
 # Define deploy stage
 FROM ubuntu:jammy as deploy
 
-# TODO(!): Copy server output binary to "."
 COPY --from=builder /usr/src/project/build/bin/server .
+COPY --from=builder /usr/src/project/docker_config .
 
-# TODO(!): Expose some port(s)
 EXPOSE 8080
 
 # Use ENTRYPOINT to specify the binary name
@@ -28,4 +27,4 @@ ENTRYPOINT ["./server"]
 
 # Use CMD to specify arguments to ENTRYPOINT
 # TODO(!): Update with real server args
-CMD ["8080"]
+CMD ["docker_config"]
