Added new docker file for coverage
cloudbuild.yaml now has a final step to build a container to check coverage

fixed test coverage line in the cmaketext to include all test files.

Change-Id: I1deaad06181586314882b0d3980e147daf260f45

--- a/docker/cloudbuild.yaml
+++ b/docker/cloudbuild.yaml
@@ -23,4 +23,10 @@ steps:
     '-t', 'gcr.io/$PROJECT_ID/fortnite-gamers:latest',
     '.'
   ]
+- name: 'gcr.io/cloud-builders/docker'
+  args: [
+    'build',
+    '-f', 'docker/coverage.Dockerfile',
+    '.'
+  ]
 images: ['gcr.io/$PROJECT_ID/fortnite-gamers:base', 'gcr.io/$PROJECT_ID/fortnite-gamers:latest']
