--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,4 +58,4 @@ gtest_discover_tests(request_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOUR
 
 # Update with target/test targets
 include(cmake/CodeCoverageReportConfig.cmake)
-generate_coverage_report(TARGETS handler_lib config_parser_lib TESTS all_test)
+generate_coverage_report(TARGETS handler_lib config_parser_lib TESTS config_parser_test request_handler_test)
