--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ add_subdirectory(/usr/src/googletest googletest)
 # Enable Boost
 # Use static libraries so binaries can be deployed without a full boost install
 set(Boost_USE_STATIC_LIBS ON)
-find_package(Boost 1.50 REQUIRED COMPONENTS system log_setup log)
+find_package(Boost 1.50 REQUIRED COMPONENTS system log_setup log filesystem)
 message(STATUS "Boost version: ${Boost_VERSION}")
 
 include_directories(include)
@@ -38,18 +38,27 @@ include_directories(include)
 add_library(session_lib src/session.cc)
 add_library(server_lib src/server.cc)
 add_library(handler_lib src/request_handler.cc)
+add_library(content_handler_lib src/content_request_handler.cc)
 add_library(echo_handler_lib src/echo_request_handler.cc)
+add_library(error_handler_lib src/error_request_handler.cc)
 add_library(config_parser_lib src/config_parser.cc)
 add_library(logging_lib src/logging.cc)
+add_library(file_reader_lib src/file_reader.cc)
 
 # Add necessary links
 target_link_libraries(echo_handler_lib handler_lib)
-target_link_libraries(server_lib session_lib echo_handler_lib)
 target_link_libraries(config_parser_lib Boost::log_setup Boost::log)
 add_library(servlet_lib src/servlet.cc)
+add_library(manager_lib src/request_manager.cc)
+target_link_libraries(content_handler_lib handler_lib Boost::filesystem)
 target_link_libraries(echo_handler_lib handler_lib)
-target_link_libraries(server_lib session_lib echo_handler_lib)
+target_link_libraries(error_handler_lib handler_lib)
+target_link_libraries(server_lib session_lib content_handler_lib echo_handler_lib error_handler_lib)
 target_link_libraries(config_parser_lib servlet_lib)
+target_link_libraries(manager_lib servlet_lib handler_lib error_handler_lib)
+target_link_libraries(session_lib manager_lib)
+target_link_libraries(content_handler_lib Boost::log_setup Boost::log file_reader_lib)
+target_link_libraries(file_reader_lib Boost::system Boost::filesystem)
 
 # add server executable
 add_executable(server src/server_main.cc)
@@ -72,8 +81,21 @@ gtest_discover_tests(servlet_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
 # Add integration test
 find_package(Python REQUIRED)
 add_test(NAME integ_test 
-        COMMAND python3 ../tests/integration_tests.py ../tests/docker_config ../build/bin/server)
+        COMMAND python3 ../tests/integration_tests.py ../server_config ../build/bin/server)
 
 # Update with target/test targets
 include(cmake/CodeCoverageReportConfig.cmake)
-generate_coverage_report(TARGETS handler_lib config_parser_lib session_lib server_lib echo_handler_lib servlet_lib TESTS config_parser_test echo_handler_test servlet_test)
+generate_coverage_report(
+    TARGETS 
+        handler_lib 
+        config_parser_lib 
+        session_lib server_lib 
+        content_handler_lib
+        echo_handler_lib 
+        error_handler_lib
+        servlet_lib 
+    TESTS 
+        config_parser_test 
+        echo_handler_test 
+        servlet_test
+)
