add more robust logging - ip logging - parsing logs - update cmake - sig handling
Change-Id: I30a44e4a7616bf88ab9408132e42bdc9f5f72900

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_library(error_handler_lib src/error_request_handler.cc)
 add_library(config_parser_lib src/config_parser.cc)
 add_library(logging_lib src/logging.cc)
 add_library(file_reader_lib src/file_reader.cc)
+add_library(signal_lib src/signal_handler.cc)
 
 # Add necessary links
 target_link_libraries(echo_handler_lib handler_lib)
@@ -53,7 +54,7 @@ add_library(manager_lib src/request_manager.cc)
 target_link_libraries(content_handler_lib handler_lib Boost::filesystem)
 target_link_libraries(echo_handler_lib handler_lib)
 target_link_libraries(error_handler_lib handler_lib)
-target_link_libraries(server_lib session_lib content_handler_lib echo_handler_lib error_handler_lib)
+target_link_libraries(server_lib session_lib content_handler_lib echo_handler_lib error_handler_lib signal_lib)
 target_link_libraries(config_parser_lib servlet_lib)
 target_link_libraries(manager_lib servlet_lib handler_lib error_handler_lib)
 target_link_libraries(session_lib manager_lib)
