Add static files in Docker
Change-Id: Ib5cb21c11b4561dc49453f65e1cf27f7ae578721

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,7 +18,7 @@ FROM ubuntu:jammy as deploy
 
 COPY --from=builder /usr/src/project/build/bin/server .
 COPY --from=builder /usr/src/project/server_config .
-
+COPY --from=builder /usr/src/project/files /usr/src/projects/fortnite-gamers/files
 EXPOSE 8080
 
 # Use ENTRYPOINT to specify the binary name
