--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,12 +51,12 @@ target_link_libraries(echo_handler_lib handler_lib)
 target_link_libraries(config_parser_lib Boost::log_setup Boost::log)
 add_library(servlet_lib src/servlet.cc)
 add_library(manager_lib src/request_manager.cc)
-target_link_libraries(content_handler_lib handler_lib Boost::filesystem)
-target_link_libraries(echo_handler_lib handler_lib)
-target_link_libraries(error_handler_lib handler_lib)
+target_link_libraries(content_handler_lib handler_lib Boost::filesystem Boost::log_setup Boost::log)
+target_link_libraries(echo_handler_lib handler_lib Boost::log_setup Boost::log)
+target_link_libraries(error_handler_lib handler_lib Boost::log_setup Boost::log)
 target_link_libraries(server_lib session_lib content_handler_lib echo_handler_lib error_handler_lib signal_lib)
 target_link_libraries(config_parser_lib servlet_lib)
-target_link_libraries(manager_lib servlet_lib handler_lib error_handler_lib)
+target_link_libraries(manager_lib servlet_lib handler_lib error_handler_lib Boost::log_setup Boost::log)
 target_link_libraries(session_lib manager_lib)
 target_link_libraries(content_handler_lib Boost::log_setup Boost::log file_reader_lib)
 target_link_libraries(file_reader_lib Boost::system Boost::filesystem)
