updating config parser to account for more edge cases
- add relevant test cases
- extend config_parser.cc

Change-Id: Id3cb5d9744d04dd9bc5703aa5cd5c4f12e6397b9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ add_library(content_handler_lib src/content_request_handler.cc)
 add_library(echo_handler_lib src/echo_request_handler.cc)
 add_library(error_handler_lib src/error_request_handler.cc)
 add_library(config_parser_lib src/config_parser.cc)
+target_compile_features(config_parser_lib PUBLIC cxx_std_17)
 add_library(logging_lib src/logging.cc)
 add_library(file_reader_lib src/file_reader.cc)
 add_library(signal_lib src/signal_handler.cc)
