--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,8 @@ add_executable(echo_handler_test tests/echo_handler_test.cc)
 target_link_libraries(echo_handler_test echo_handler_lib gtest_main)
 add_executable(servlet_test tests/servlet_test.cc)
 target_link_libraries(servlet_test servlet_lib gtest_main)
+add_executable(server_test tests/server_test.cc)
+target_link_libraries(server_test server_lib gtest_main)
 add_executable(manager_test tests/request_manager_test.cc)
 target_link_libraries(
     manager_test 
@@ -93,6 +95,7 @@ gtest_discover_tests(echo_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_
 gtest_discover_tests(servlet_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 gtest_discover_tests(manager_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 gtest_discover_tests(content_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+gtest_discover_tests(server_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
 
 # Add integration test
@@ -112,11 +115,13 @@ generate_coverage_report(
         error_handler_lib
         servlet_lib 
         file_reader_lib
-        manager_lib        
+        manager_lib  
+        server_lib  
     TESTS 
         config_parser_test 
         echo_handler_test 
         servlet_test
         manager_test
         content_handler_test
+        server_test
 )
