Added initial interface change for review
Replaced request_data object with boost::beast::http_response

Replaced std::string return type with boost::beast::http_request

Tests are a work in progress - issue with echo handler and how to return correct full target

Change-Id: I784ecfa73b505f8dbade5ec5bf77bba904043ef0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ add_library(manager_lib src/request_manager.cc)
 add_library(handler_factory_lib src/handler_factory.cc)
 target_link_libraries(echo_handler_lib handler_lib Boost::log_setup Boost::log)
 target_link_libraries(server_lib session_lib signal_lib)
-target_link_libraries(handler_factory_lib echo_handler_lib)
+target_link_libraries(handler_factory_lib error_handler_lib)
 target_link_libraries(manager_lib handler_lib handler_factory_lib location_data_lib Boost::log_setup Boost::log)
 target_link_libraries(session_lib manager_lib)
 target_link_libraries(file_reader_lib Boost::system Boost::filesystem)
