feat: Implement `FileSystem` API.
This creates a `FileSystem` API to be used with dependency injection for
the future CRUD handler, with two implementations:
- `RealFileSystem`: Actually mutates the local filesystem
- `FakeFileSystem`: Operates entirely in memory

Change-Id: If920034d0c756f5b5fca8b8a6e6f58c55ebbc2e8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ add_library(signal_lib src/signal_handler.cc)
 add_library(static_handler_lib OBJECT src/handlers/static_handler.cc)
 add_library(echo_handler_lib OBJECT src/handlers/echo_handler.cc)
 add_library(error_handler_lib OBJECT src/handlers/error_handler.cc)
+add_library(filesystem_lib src/filesystem/filesystem.cc)
 add_library(manager_lib src/request_manager.cc)
 
 # Update C++ version for files that need cpp20 features like contains()
@@ -80,6 +81,7 @@ target_link_libraries(
     server_lib 
     manager_lib 
     logging_lib 
+    filesystem_lib
     Boost::system
 )
 
@@ -101,6 +103,10 @@ target_link_libraries(server_test server_lib file_reader_lib gtest_main)
 
 add_executable(error_handler_test tests/error_handler_test.cc)
 target_link_libraries(error_handler_test error_handler_lib gtest_main)
+
+add_executable(filesystem_test tests/filesystem_test.cc)
+target_compile_features(filesystem_test PUBLIC cxx_std_20)
+target_link_libraries(filesystem_test gtest_main)
 
 add_executable(manager_test tests/request_manager_test.cc)
 target_link_libraries(
@@ -125,6 +131,7 @@ gtest_discover_tests(manager_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
 gtest_discover_tests(static_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 gtest_discover_tests(server_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 gtest_discover_tests(error_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+gtest_discover_tests(filesystem_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
 # Update with target/test targets
 include(cmake/CodeCoverageReportConfig.cmake)
@@ -147,6 +154,7 @@ generate_coverage_report(
         static_handler_test
         server_test
         error_handler_test
+        filesystem_test
 )
 
 # Add integration test
