--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ add_library(echo_handler_lib OBJECT src/handlers/echo_handler.cc)
 add_library(error_handler_lib OBJECT src/handlers/error_handler.cc)
 add_library(filesystem_lib src/filesystem/filesystem.cc)
 add_library(manager_lib src/request_manager.cc)
+add_library(crud_handler_lib OBJECT src/handlers/crud_handler.cc)
 
 # Update C++ version for files that need cpp20 features like contains()
 target_compile_features(manager_lib PUBLIC cxx_std_20)
@@ -62,12 +63,14 @@ target_link_libraries(
     config_parser_lib 
     location_data_lib 
     static_handler_lib
+    crud_handler_lib
     echo_handler_lib
     Boost::log_setup Boost::log
 )
 target_link_libraries(echo_handler_lib handler_lib Boost::log)
 target_link_libraries(static_handler_lib handler_lib file_reader_lib Boost::filesystem Boost::log_setup Boost::log)
 target_link_libraries(error_handler_lib handler_lib Boost::log_setup Boost::log)
+target_link_libraries(crud_handler_lib handler_lib Boost::filesystem Boost::log_setup Boost::log)
 
 # add server executable
 add_executable(server src/server_main.cc)
@@ -77,6 +80,7 @@ target_link_libraries(
     error_handler_lib
     echo_handler_lib
     static_handler_lib
+    crud_handler_lib
     session_lib 
     server_lib 
     manager_lib 
@@ -91,6 +95,7 @@ target_link_libraries(
     config_parser_test 
     config_parser_lib 
     static_handler_lib
+    crud_handler_lib
     echo_handler_lib
     gtest_main
 )
@@ -116,6 +121,7 @@ target_link_libraries(
     error_handler_lib
     echo_handler_lib
     static_handler_lib
+    crud_handler_lib
     handler_lib
     file_reader_lib 
     gtest_main
@@ -141,6 +147,7 @@ generate_coverage_report(
         config_parser_lib 
         session_lib server_lib 
         static_handler_lib
+        crud_handler_lib
         echo_handler_lib 
         error_handler_lib
         file_reader_lib
