--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,8 @@ add_library(error_handler_lib OBJECT src/handlers/error_handler.cc)
 add_library(filesystem_lib src/filesystem/filesystem.cc)
 add_library(manager_lib src/request_manager.cc)
 add_library(crud_handler_lib OBJECT src/handlers/crud_handler.cc)
+add_library(health_handler_lib OBJECT src/handlers/health_handler.cc)
+
 
 # Update C++ version for files that need cpp20 features like contains()
 target_compile_features(manager_lib PUBLIC cxx_std_20)
@@ -71,6 +73,7 @@ target_link_libraries(echo_handler_lib handler_lib Boost::log)
 target_link_libraries(static_handler_lib handler_lib file_reader_lib Boost::filesystem Boost::log_setup Boost::log)
 target_link_libraries(error_handler_lib handler_lib Boost::log_setup Boost::log)
 target_link_libraries(crud_handler_lib handler_lib filesystem_lib Boost::filesystem Boost::log_setup Boost::log)
+target_link_libraries(health_handler_lib handler_lib Boost::log_setup Boost::log)
 
 # add server executable
 add_executable(server src/server_main.cc)
@@ -81,6 +84,7 @@ target_link_libraries(
     echo_handler_lib
     static_handler_lib
     crud_handler_lib
+    health_handler_lib
     session_lib 
     server_lib 
     manager_lib 
@@ -130,6 +134,9 @@ target_link_libraries(
 add_executable(static_handler_test tests/static_handler_test.cc)
 target_link_libraries(static_handler_test static_handler_lib gtest_main)
 
+add_executable(health_handler_test tests/health_handler_test.cc)
+target_link_libraries(health_handler_test health_handler_lib gtest_main)
+
 # Update with test binary
 gtest_discover_tests(config_parser_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 gtest_discover_tests(echo_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
@@ -138,6 +145,7 @@ gtest_discover_tests(static_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURC
 gtest_discover_tests(server_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 gtest_discover_tests(error_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 gtest_discover_tests(crud_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+gtest_discover_tests(health_handler_test WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
 # Update with target/test targets
 include(cmake/CodeCoverageReportConfig.cmake)
@@ -150,6 +158,7 @@ generate_coverage_report(
         crud_handler_lib
         echo_handler_lib 
         error_handler_lib
+        health_handler_lib
         file_reader_lib
         manager_lib  
         server_lib  
@@ -157,6 +166,7 @@ generate_coverage_report(
     TESTS 
         config_parser_test 
         echo_handler_test 
+        health_handler_test
         manager_test
         static_handler_test
         server_test
