Added new dockerfile changes and new config
Changes only on deploy stage for the persistent storage.

/mnt/storage is where the docker file points to the persistent storage

/mnt/storage/crud_files is where the config points

Change-Id: Idc95f657673ec12438d8a9fea4d2afb298b31f0d

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,7 +17,7 @@ RUN ctest --output-on_failure
 FROM ubuntu:jammy as deploy
 
 COPY --from=builder /usr/src/project/build/bin/server .
-COPY --from=builder /usr/src/project/server_config .
+COPY --from=builder /usr/src/project/server_config_deploy .
 COPY --from=builder /usr/src/project/files /usr/src/projects/fortnite-gamers/files
 EXPOSE 8080
 
@@ -25,4 +25,4 @@ EXPOSE 8080
 ENTRYPOINT ["./server"]
 
 # Use CMD to specify arguments to ENTRYPOINT
-CMD ["server_config"]
+CMD ["server_config_deploy"]
