--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,14 @@ add_library(manager_lib src/request_manager.cc)
 add_library(crud_handler_lib OBJECT src/handlers/crud_handler.cc)
 add_library(health_handler_lib OBJECT src/handlers/health_handler.cc)
 add_library(sleep_handler_lib OBJECT src/handlers/sleep_handler.cc)
+add_library(markdown_parser_lib src/markdown_parser.cc)
 
 # Update C++ version for files that need cpp20 features like contains()
 target_compile_features(manager_lib PUBLIC cxx_std_20)
 target_compile_features(config_parser_lib PUBLIC cxx_std_20)
+
+# Update C++ version for files that need cpp17 features like std::optional
+target_compile_features(markdown_parser_lib PUBLIC cxx_std_17)
 
 # Add necessary links for server, session, handlers, and helpers
 target_link_libraries(server_lib session_lib signal_lib)
